# learn-wgpu

./: Cargo.toml
assets/models/: cube2.mtl
shaders/: boids.comp  boids.frag  boids.vert  point_cloud.vert  shader.frag  shader.vert  textured.vert
src/: boids.rs  camera.rs  instance.rs  main.rs  model.rs  point_cloud.rs  state.rs  texture.rs  uniforms.rs  vertex.rs
