[package]
name = "learn-wgpu"
version = "0.1.0"
authors = ["YmiYugy <ymi@yugy@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.22"
futures = "0.3"
include-glsl = "0.2"
bytemuck = "1.2"
cgmath = "0.17.0"
failure = "0.1.8"
tobj = "2.0"

[dependencies.wgpu]
git = "https://github.com/gfx-rs/wgpu-rs.git"
features = ["trace"]